fix community page on mobiles

--- a/source/css/community.css.scss
+++ b/source/css/community.css.scss
@@ -17,15 +17,15 @@ $become-a-sponsor-top: 40px;
     .logo-container {
       margin-left: auto;
       margin-right: auto;
-      width: 300px;
+      height: 190px;
 
       .logo {
-        width: 300px;
         height: 190px;
+        display: inline-block;
         margin: 0 auto;
-        vertical-align: middle;
-        display: table-cell;
         border-radius: 5px;
+        text-align: center;
+        line-height: 190px;
       }
     }
 
